--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Restoran - Bootstrap Restaurant Template</title>
+    <title>Daawath</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -612,45 +612,59 @@
                 <div class="owl-carousel testimonial-carousel">
                     <div class="testimonial-item bg-transparent border rounded p-4">
                         <i class="fa fa-quote-left fa-2x text-primary mb-3"></i>
-                        <p>Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod eos labore diam</p>
+                        <p>A great place to visit with family & friends in RJP, soothing ambience with🍽 pleasant atmosphere, 🚨prices are very reasonable! ;Service= Staff was attentive & quick to respond to our needs. Our order arrived within 20 minutes🕛, and they were helpful in recommending dishes. We suggested some taste modifications in items ;they really did it well .</p>
                         <div class="d-flex align-items-center">
-                            <img class="img-fluid flex-shrink-0 rounded-circle" src="img/testimonial-1.jpg" style="width: 50px; height: 50px;">
+                            <img class="img-fluid flex-shrink-0 rounded-circle" src="img/review_mahesh.png" style="width: 50px; height: 50px;">
                             <div class="ps-3">
-                                <h5 class="mb-1">Client Name</h5>
-                                <small>Profession</small>
+                                <h5 class="mb-1">Suharsha Mahesh</h5>
+                                <small></small>
                             </div>
                         </div>
                     </div>
                     <div class="testimonial-item bg-transparent border rounded p-4">
                         <i class="fa fa-quote-left fa-2x text-primary mb-3"></i>
-                        <p>Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod eos labore diam</p>
+                        <p>I had an amazing dining experience at Daawath.
+                            Every dish we ordered was bursting with flavor especially the Biriyani.
+                            
+                            Overall Daawath is a must visit restaurant in Rajampet for anyone who loves best food and a pleasant dining environment.</p>
                         <div class="d-flex align-items-center">
-                            <img class="img-fluid flex-shrink-0 rounded-circle" src="img/testimonial-2.jpg" style="width: 50px; height: 50px;">
+                            <img class="img-fluid flex-shrink-0 rounded-circle" src="img/review_rakesh.png" style="width: 50px; height: 50px;">
                             <div class="ps-3">
-                                <h5 class="mb-1">Client Name</h5>
-                                <small>Profession</small>
+                                <h5 class="mb-1">RAKESH K REDDY</h5>
+                                <small></small>
                             </div>
                         </div>
                     </div>
                     <div class="testimonial-item bg-transparent border rounded p-4">
                         <i class="fa fa-quote-left fa-2x text-primary mb-3"></i>
-                        <p>Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod eos labore diam</p>
+                        <p>Just had dinner at Daawat Rajampet. The ambiance is great, and having a multi-cuisine restaurant in Rajampet is a big plus. The menu is diverse, making it tough to choose. We tried chicken mancho soup, chicken 555, Daawat special chicken starter, butter kulcha naan, butter naan, garlic butter naan, roti, and chicken curry. The naans were especially good. For the main course, the chicken moghal biryani was unique and worth trying again. Overall, we had a great time with family and friends.</p>
                         <div class="d-flex align-items-center">
-                            <img class="img-fluid flex-shrink-0 rounded-circle" src="img/testimonial-3.jpg" style="width: 50px; height: 50px;">
+                            <img class="img-fluid flex-shrink-0 rounded-circle" src="img/review_r.png" style="width: 50px; height: 50px;">
                             <div class="ps-3">
-                                <h5 class="mb-1">Client Name</h5>
-                                <small>Profession</small>
+                                <h5 class="mb-1">Ravi Teja N</h5>
+                                <small></small>
                             </div>
                         </div>
                     </div>
                     <div class="testimonial-item bg-transparent border rounded p-4">
                         <i class="fa fa-quote-left fa-2x text-primary mb-3"></i>
-                        <p>Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod eos labore diam</p>
+                        <p>Good quality of food.. Cleanly maintained.. They greet well.. Friendly atmosphere.. Reasonable prices.. Quality maintained..</p>
                         <div class="d-flex align-items-center">
-                            <img class="img-fluid flex-shrink-0 rounded-circle" src="img/testimonial-4.jpg" style="width: 50px; height: 50px;">
+                            <img class="img-fluid flex-shrink-0 rounded-circle" src="img/review_s.png" style="width: 50px; height: 50px;">
                             <div class="ps-3">
-                                <h5 class="mb-1">Client Name</h5>
-                                <small>Profession</small>
+                                <h5 class="mb-1">Shaik Abubakar</h5>
+                                <small></small>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="testimonial-item bg-transparent border rounded p-4">
+                        <i class="fa fa-quote-left fa-2x text-primary mb-3"></i>
+                        <p>Daawat Restaurant in Rajampet offers a great atmosphere with comfortable seating and tasteful decor, perfect for family gatherings and casual outings. The food is flavorful, with standout dishes like biryanis and curries, praised for their authentic taste and freshness.</p>
+                        <div class="d-flex align-items-center">
+                            <img class="img-fluid flex-shrink-0 rounded-circle" src="img/review_fahim.png" style="width: 50px; height: 50px;">
+                            <div class="ps-3">
+                                <h5 class="mb-1">fahim shaik</h5>
+                                <small></small>
                             </div>
                         </div>
                     </div>
