--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
                                 <a href="https://www.youtube.com/@daawath_rjpt" class="btn btn-primary py-2 px-2"><i class='fab fa-youtube'></i></a>
                             </div>
                         </div>
-                        <div class="col-lg-6 text-center text-lg-end overflow-hidden">
-                            <img class="img-fluid" src="img/hero.png" alt="">
+                        <div class="col-lg-6 text-center text-lg-end">
+                            <img class="img-fluid" src="img/main_food_image.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -520,85 +520,105 @@
         </div>
         <!-- Menu End -->
 
-
-        <!-- Reservation Start -->
-        <div class="container-xxl py-5 px-0 wow fadeInUp" data-wow-delay="0.1s" id="Booking">
-            <div class="row g-0">
-                <div class="col-md-6">
-                    <div class="video">
-                        <button type="button" class="btn-play" data-bs-toggle="modal" data-src="https://www.youtube.com/watch?v=DJN4op7bmhU" data-bs-target="#videoModal">
-                            <span></span>
-                        </button>
-                    </div>
+<!--        <iframe width="560" height="315" src="https://www.youtube.com/embed/DJN4op7bmhU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
+        <!-- Container for Video -->
+        <div class="container-xxl py-5 px-10 wow fadeInUp" data-wow-delay="0.1s" id="Video">
+            <!-- Video Thumbnail with Play Icon -->
+            <div class="position-relative">
+                <img src="https://img.youtube.com/vi/DJN4op7bmhU/0.jpg" alt="Video Thumbnail" class="img-fluid video-thumbnail" id="videoThumbnail" style="cursor: pointer;">
+                <!-- Play Icon -->
+                <div class="play-icon">
+                    <span>&#9658;</span> <!-- Unicode for a play triangle -->
                 </div>
-                <div class="col-md-6 bg-dark d-flex align-items-center">
-                    <div class="p-5 wow fadeInUp" data-wow-delay="0.2s">
-                        <h5 class="section-title ff-secondary text-start text-primary fw-normal">Reservation</h5>
-                        <h1 class="text-white mb-4">Book A Table Online</h1>
-                        <form>
-                            <div class="row g-3">
-                                <div class="col-md-6">
-                                    <div class="form-floating">
-                                        <input type="text" class="form-control" id="name" placeholder="Your Name">
-                                        <label for="name">Your Name</label>
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="form-floating">
-                                        <input type="email" class="form-control" id="email" placeholder="Your Email">
-                                        <label for="email">Your Email</label>
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="form-floating date" id="date3" data-target-input="nearest">
-                                        <input type="text" class="form-control datetimepicker-input" id="datetime" placeholder="Date & Time" data-target="#date3" data-toggle="datetimepicker" />
-                                        <label for="datetime">Date & Time</label>
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="form-floating">
-                                        <select class="form-select" id="select1">
-                                          <option value="1">People 1</option>
-                                          <option value="2">People 2</option>
-                                          <option value="3">People 3</option>
-                                        </select>
-                                        <label for="select1">No Of People</label>
-                                      </div>
-                                </div>
-                                <div class="col-12">
-                                    <div class="form-floating">
-                                        <textarea class="form-control" placeholder="Special Request" id="message" style="height: 100px"></textarea>
-                                        <label for="message">Special Request</label>
-                                    </div>
-                                </div>
-                                <div class="col-12">
-                                    <button class="btn btn-primary w-100 py-3" type="submit">Book Now</button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
+            </div>
+            <div id="videoContainer" style="display: none; text-align: center;">
+                <!-- Embed YouTube Video -->
+                <iframe id="videoIframe" width="100%" height="315" src="" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
 
-        <div class="modal fade" id="videoModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content rounded-0">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">Youtube Video</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
-                        <!-- 16:9 aspect ratio -->
-                        <div class="ratio ratio-16x9">
-                            <iframe class="embed-responsive-item" src="" id="video" allowfullscreen allowscriptaccess="always"
-                                allow="autoplay"></iframe>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Reservation Start -->
+
+
+
+
+        <!--        &lt;!&ndash; Reservation Start &ndash;&gt;-->
+<!--        <div class="container-xxl py-5 px-0 wow fadeInUp" data-wow-delay="0.1s" id="Booking">-->
+<!--            <div class="row g-0">-->
+<!--                <div class="col-md-6">-->
+<!--                    <div class="video">-->
+<!--                        <button type="button" class="btn-play" data-bs-toggle="modal" data-src="https://www.youtube.com/watch?v=DJN4op7bmhU" data-bs-target="#videoModal">-->
+<!--                            <span></span>-->
+<!--                        </button>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="col-md-6 bg-dark d-flex align-items-center">-->
+<!--                    <div class="p-5 wow fadeInUp" data-wow-delay="0.2s">-->
+<!--                        <h5 class="section-title ff-secondary text-start text-primary fw-normal">Reservation</h5>-->
+<!--                        <h1 class="text-white mb-4">Book A Table Online</h1>-->
+<!--                        <form>-->
+<!--                            <div class="row g-3">-->
+<!--                                <div class="col-md-6">-->
+<!--                                    <div class="form-floating">-->
+<!--                                        <input type="text" class="form-control" id="name" placeholder="Your Name">-->
+<!--                                        <label for="name">Your Name</label>-->
+<!--                                    </div>-->
+<!--                                </div>-->
+<!--                                <div class="col-md-6">-->
+<!--                                    <div class="form-floating">-->
+<!--                                        <input type="email" class="form-control" id="email" placeholder="Your Email">-->
+<!--                                        <label for="email">Your Email</label>-->
+<!--                                    </div>-->
+<!--                                </div>-->
+<!--                                <div class="col-md-6">-->
+<!--                                    <div class="form-floating date" id="date3" data-target-input="nearest">-->
+<!--                                        <input type="text" class="form-control datetimepicker-input" id="datetime" placeholder="Date & Time" data-target="#date3" data-toggle="datetimepicker" />-->
+<!--                                        <label for="datetime">Date & Time</label>-->
+<!--                                    </div>-->
+<!--                                </div>-->
+<!--                                <div class="col-md-6">-->
+<!--                                    <div class="form-floating">-->
+<!--                                        <select class="form-select" id="select1">-->
+<!--                                          <option value="1">People 1</option>-->
+<!--                                          <option value="2">People 2</option>-->
+<!--                                          <option value="3">People 3</option>-->
+<!--                                        </select>-->
+<!--                                        <label for="select1">No Of People</label>-->
+<!--                                      </div>-->
+<!--                                </div>-->
+<!--                                <div class="col-12">-->
+<!--                                    <div class="form-floating">-->
+<!--                                        <textarea class="form-control" placeholder="Special Request" id="message" style="height: 100px"></textarea>-->
+<!--                                        <label for="message">Special Request</label>-->
+<!--                                    </div>-->
+<!--                                </div>-->
+<!--                                <div class="col-12">-->
+<!--                                    <button class="btn btn-primary w-100 py-3" type="submit">Book Now</button>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </form>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+
+<!--        <div class="modal fade" id="videoModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">-->
+<!--            <div class="modal-dialog">-->
+<!--                <div class="modal-content rounded-0">-->
+<!--                    <div class="modal-header">-->
+<!--                        <h5 class="modal-title" id="exampleModalLabel">Youtube Video</h5>-->
+<!--                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>-->
+<!--                    </div>-->
+<!--                    <div class="modal-body">-->
+<!--                        &lt;!&ndash; 16:9 aspect ratio &ndash;&gt;-->
+<!--                        <div class="ratio ratio-16x9">-->
+<!--                            <iframe class="embed-responsive-item" src="" id="video" allowfullscreen allowscriptaccess="always"-->
+<!--                                allow="autoplay"></iframe>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        &lt;!&ndash; Reservation Start &ndash;&gt;-->
 
 
         <!-- Testimonial Start -->
@@ -719,8 +739,25 @@
     <script src="lib/tempusdominus/js/moment-timezone.min.js"></script>
     <script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
 
+    <!-- Custom JS to load and play the video in place of thumbnail -->
+    <script>
+        const videoThumbnail = document.getElementById('videoThumbnail');
+        const videoContainer = document.getElementById('videoContainer');
+        const videoIframe = document.getElementById('videoIframe');
+
+        videoThumbnail.addEventListener('click', function() {
+            // Hide the thumbnail and show the video container
+            videoThumbnail.style.display = 'none';
+            videoContainer.style.display = 'block';
+
+            // Set the iframe source to play the video
+            videoIframe.src = "https://www.youtube.com/embed/DJN4op7bmhU?autoplay=1";
+        });
+    </script>
+
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
+
 </body>
 
 </html>
