--- a/menu.html
+++ b/menu.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Restoran - Bootstrap Restaurant Template</title>
+    <title>Daawath</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -82,7 +82,8 @@
                 <div class="row align-items-center g-5">
                     <div class="col-lg-6 text-center text-lg-start">
                         <h1 class="display-3 text-white animated slideInLeft">Enjoy Our<br>Delicious Meal</h1>
-                        <p class="text-white animated slideInLeft mb-4 pb-2">Welcome to Daawath, where we serve authentic Telugu cuisine and a unique fusion of Indian and Chinese flavors. Indulge in our aromatic biryanis, flavorful curries, crispy starters, and signature Mandi for an unforgettable culinary experience!</p>
+                        <p class="text-white animated slideInLeft mb-4 pb-2">Daawath restaurant in Rajampet offers a wide variety of flavorful dishes, blending traditional Telugu cuisine with Indian and Chinese fusion. Their biryanis, curries, and starters stand out for their authentic taste, made with fresh ingredients. Family packs and bucket biryanis are perfect for gatherings.
+                            <br><br>The menu also includes soft butter naan, garlic butter naan, and hearty rotis to complement the rich curries. With options like chicken moghal biryani and tender chicken starters, Daawath ensures a delightful dining experience in a cozy atmosphere, ideal for family meals and casual outings.</p>
                         <div class="btn btn-primary py-sm-2 px-sm-4 me-2 animated slideInLeft">
                             <a href="https://wa.me/919573727749" class="btn btn-primary py-2 px-2"><i class='fab fa-whatsapp'></i></a>
                             <a href="https://www.instagram.com/daawath_rjpt/" class="btn btn-primary py-2 px-2"><i class='fab fa-instagram'></i></a>
@@ -90,8 +91,8 @@
                             <a href="https://www.youtube.com/@daawath_rjpt" class="btn btn-primary py-2 px-2"><i class='fab fa-youtube'></i></a>
                         </div>
                     </div>
-                    <div class="col-lg-6 text-center text-lg-end overflow-hidden">
-                        <img class="img-fluid" src="img/hero.png" alt="">
+                    <div class="col-lg-6 text-center text-lg-end">
+                        <img class="img-fluid" src="img/main_food_image.png" alt="">
                     </div>
                 </div>
             </div>
