--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
                                 <a href="https://www.facebook.com/daawath.rjpt" class="btn btn-primary py-2 px-2"><i class='fab fa-facebook'></i></a>
                                 <a href="https://www.youtube.com/@daawath_rjpt" class="btn btn-primary py-2 px-2"><i class='fab fa-youtube'></i></a>
                             </div>
+                            <div class="btn btn-primary py-sm-2 px-sm-4 me-2 animated slideInLeft">
+                                <a href="https://www.google.com/maps/dir//daawath+multi+cuisine+family+restaurant/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x3bb3250073d140b9:0x611c3de27ac50c25?sa=X&ved=1t:3061&ictx=111" class="btn btn-primary py-2 px-2"><i class='fas fa-directions'></i> Get Direction</a>
+                            </div>
                         </div>
                         <div class="col-lg-6 text-center text-lg-end">
                             <img class="img-fluid" src="img/main_food_image.png" alt="">
