--- a/index.html
+++ b/index.html
@@ -709,6 +709,7 @@
                             <a class="btn btn-outline-light btn-social" href="https://www.facebook.com/daawath.rjpt"><i class="fab fa-facebook-f"></i></a>
                             <a class="btn btn-outline-light btn-social" href="https://www.instagram.com/daawath_rjpt/"><i class="fab fa-instagram"></i></a>
                             <a class="btn btn-outline-light btn-social" href="https://www.youtube.com/@daawath_rjpt"><i class="fab fa-youtube"></i></a>
+                            <a class="btn btn-outline-light btn-social" href="https://www.google.com/maps/dir//daawath+multi+cuisine+family+restaurant/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x3bb3250073d140b9:0x611c3de27ac50c25?sa=X&ved=1t:3061&ictx=111"><i class="fas fa-directions"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-5 col-md-6">
