--- a/index.html
+++ b/index.html
@@ -719,6 +719,8 @@
                     </div>
                 </div>
             </div>
+             <a href='https://www.free-counters.org/'>Free-Counters</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=25329deb6546228c9779b87c57a1d389085dd849'></script>
+<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1286365/t/5"></script>
             <div class="container">
 
             </div>
