--- a/index.html
+++ b/index.html
@@ -716,13 +716,14 @@
                         <h4 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Opening</h4>
                         <h5 class="text-light fw-normal"> Every Day</h5>
                         <p>11:30AM - 10:50PM</p>
-                    </div>
-                </div>
-                <a href='https://www.free-counters.org/'>Free-Counters</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=25329deb6546228c9779b87c57a1d389085dd849'></script>
+                        <h5 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Page Visits</h5><a href='https://www.free-counters.org/'>Free-Counters</a><script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=25329deb6546228c9779b87c57a1d389085dd849'></script>
 <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1286365/t/5"></script>
+                    </div>
+                    
+                </div>
             </div>
-            <div class="container">
-
+            <div class="align-items-center">
+                
             </div>
         </div>
         <!-- Footer End -->
