sunday special offer

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                         <a href="#About" class="nav-item nav-link">About</a>
                         <a href="#Service" class="nav-item nav-link">Service</a>
                         <a href="menu.html" class="nav-item nav-link">Menu</a>
+                        <a href="special.html" class="nav-item nav-link">Special</a>
                         <a href="#Contact" class="nav-item nav-link">Contact</a>
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
