--- a/special.html
+++ b/special.html
@@ -82,9 +82,8 @@
             <div class="container my-5 py-5">
                 <div class="row align-items-center g-5">
                     <div class="col-lg-6 text-center text-lg-start">
-                        <h1 class="display-3 text-white animated slideInLeft">Discover the Flavors of Daawath </h1>
-                        <p class="text-white animated slideInLeft mb-4 pb-2">Daawath restaurant in Rajampet offers a wide variety of flavorful dishes, blending traditional Telugu cuisine with Indian and Chinese fusion. Their biryanis, curries, and starters stand out for their authentic taste, made with fresh ingredients. Family packs and bucket biryanis are perfect for gatherings.
-                            <br><br>The menu also includes soft butter naan, garlic butter naan, and hearty rotis to complement the rich curries. With options like chicken moghal biryani and tender chicken starters, Daawath ensures a delightful dining experience in a cozy atmosphere, ideal for family meals and casual outings.</p>
+                        <h1 class="display-3 text-white animated slideInLeft">Special Offers at Daawath </h1>
+                        <p class="text-white animated slideInLeft mb-4 pb-2">Welcome to Daawath, where delicious food meets unbeatable value! We believe in making every meal special, which is why we bring you exciting offers to enhance your dining experience. Enjoy mouthwatering Telugu, Indian, and Chinese flavors at the best prices.</p>
                         <div class="btn btn-primary py-sm-2 px-sm-4 me-2 animated slideInLeft">
                             <a href="https://wa.me/919573727749" class="btn btn-primary py-2 px-2"><i class='fab fa-whatsapp'></i></a>
                             <a href="https://www.instagram.com/daawath_rjpt/" class="btn btn-primary py-2 px-2"><i class='fab fa-instagram'></i></a>
@@ -103,8 +102,19 @@
 
 
         <!-- Menu Start -->
-    <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
+    <!-- <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
             <h1 class="mb-5">We are working on it coming soon... </h1>
+    </div> -->
+    <div class="container col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.1s">
+        <div class="service-item rounded pt-3">
+            <div class="p-4">
+                <i class="text-primary mb-4"></i>
+                <h5>SUNDAY SPECIAL</h5>
+                <p>CHITTIMUTHYALU BIRYANIES<br>
+                    <img class="img-fluid" src="img/chittimuthualuSpl.jpg" alt="">
+                </p>
+            </div>
+        </div>
     </div>
 
 <!--        <div class="container-xxl py-5">-->
